@@ -71,15 +71,15 @@ for (let tierUpLoopCounter = 0; tierUpLoopCounter < 1e3; ++tierUpLoopCounter) {
             let expectedResult = expectedResults[i][j];
             let result = opaquePow(base, exponent);
             if (!isIdentical(result, expectedResult))
-                throw "Failed opaquePow with base = " + base + " exponent = " + exponent + " expected (" + expectedResult + ") got (" + result + ")";
+                throw `Failed opaquePow with base = ${base} exponent = ${exponent} expected (${expectedResult}) got (${result})`;
 
             result = constantBaseFunctions[i](exponent);
             if (!isIdentical(result, expectedResult))
-                throw "Failed constantBaseFunctions with base = " + base + " exponent = " + exponent;
+                throw `Failed constantBaseFunctions with base = ${base} exponent = ${exponent} expected (${expectedResult}) got (${result})`;
 
             result = constantExponentFunctions[j](base);
             if (!isIdentical(result, expectedResult))
-                throw "Failed constantExponentFunctions with base = " + base + " exponent = " + exponent;
+                throw `Failed constantExponentFunctions with base = ${base} exponent = ${exponent} expected (${expectedResult}) got (${result})`;
         }
     }
 }
